--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^15.4.2"
   },
   "devDependencies": {
+    "react-edit-inline": "^1.0.8",
     "react-scripts": "0.9.5"
   },
   "scripts": {
